welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
while(!sortieTrouvee())){
^Poucet:2: error: illegal start of simple expression
while(!sortieTrouvee())){
                       ^